# introduction-to-dvc

./: dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
data/evaluation/: .gitignore
data/featurized/: .gitignore
data/processed/: .gitignore
data/raw/: lego_sets.csv.dvc
models/: .gitignore
presentation/: An Introduction to Data Version Control (DVC).qmd  _quarto.yml
src/: evaluate.py  featurize.py  preprocessing.py  train.py
